# hfbr

./: .gitignore  CLAUDE.md  LICENSE.rst  README.md  README.rst  example_settings.py  example_settings.yaml  hfbrw.py  pyproject.toml  sample_settings.py
.github/workflows/: pypi.yaml
src/hfbr/: backup.py  hfbr.py  main.py  retention.py
tests/: test_backup.py  test_hfbr.py  test_main.py  test_retention.py  test_typecheck.py
