[project]
name = "hfbr"
version = "15.0"
description = "High Frequency Backup and Retention"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["pyyaml>=5.0"]

[project.scripts]
hfbr = "hfbr.main:main"

[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=hfbr --cov-report=term-missing"

[tool.ruff]
line-length = 120

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ty>=0.0.17",
]
