[project]
name = "hfbr"
version = "0.2"
description = "High Frequency Backup and Retention"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["pyyaml>=5.0"]
authors = [{name = "Liz Balbuena"}]
license = "Apache-2.0"
keywords = ["backup", "retention", "cli", "snapshot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/Liz4v/hfbr"
Repository = "https://github.com/Liz4v/hfbr.git"
Documentation = "https://github.com/Liz4v/hfbr/blob/main/README.md"
Issues = "https://github.com/Liz4v/hfbr/issues"
Changelog = "https://github.com/Liz4v/hfbr/releases"

[project.scripts]
hfbr = "hfbr.main:main"

[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=hfbr --cov-report=term-missing"

[tool.ruff]
line-length = 120

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ty>=0.0.17",
]
